# mini-vim

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
public/: changelog.rss  index.html
public/changelog/: index.html
src/: editor.rs  main.rs
src/editor/: editorcommands.rs  terminal.rs  view.rs
src/editor/view/: buffer.rs  clipboard_interface.rs  help.rs  highlight.rs  line.rs  search.rs  theme.rs  vim_mode.rs
src/public/: index.html
