[package]
name = "mini-vim"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/khammersmith17/text-editor.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
crossterm = "0.28.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
